Tue Jul  7 09:03:21 CEST 2009 (Manuel Serrano):

	*** api/mail/src/Llib/rfc2045.scm: improve mime multipart decoding.
	

Mon Jul  6 11:42:58 CEST 2009 (Manuel Serrano):

	*** runtime/Llib/unicode.scm: fix utf-8 decoding (#xc3...#xde were
	not correctly decoded).
	

Sat Jul  4 07:02:16 CEST 2009 (Manuel Serrano):

	*** runtime/Clib/cports.c: CLOSE-OUTPUT-PORT was liable to raise
	an exception and thus not close its file descriptors which causes
	descriptors leaks.
	

Fri Jul  3 10:49:41 CEST 2009 (Manuel Serrano):

	*** api/pthread/src/Llib/pthread.sch: fix $pthread-nil for Java.
	

Thu Jul  2 18:26:25 CEST 2009 (Manuel Serrano):

	*** comptime/SavJvm/out.scm: fix a compiler bug when the code to
	be compiled comes from stdin.
	

Tue Jun 30 14:15:15 CEST 2009 (Manuel Serrano):

	*** runtime/Jlib/output_pipe_port.java: add the missing Java 
	implementation of output pipe ports!
	

Mon Jun 29 17:04:17 CEST 2009 (Manuel Serrano):

	*** comptime/Ast/sexp.scm, runtime/Eval/evcompile.scm: fix keyword
	shadowing to conform R5RS specification.
	

Mon Jun 29 09:38:30 CEST 2009 (Cyprien Nicolas):

	*** configure: improve gmp configuration.
	

Tue Jun 23 14:40:23 CEST 2009 (Manuel Serrano):

	*** runtime/Eval/evmodule.scm: add *load-path* to eval include
	module clauses.
	

Mon Jun 22 08:52:14 CEST 2009 (Manuel Serrano):

	*** runtime/Eval/expdargs.scm: ARGS-PARSE's else clauses now have
	the additional REST variable automatically bound.
	

Fri Jun 19 07:52:13 CEST 2009 (Manuel Serrano):

	*** Eval/evmeaning.scm: fix eval error traces on tail calls.
	

Sun Jun  7 06:48:24 CEST 2009 (Manuel Serrano):

	* runtime/Llib/io.scm: add the ~l suffix to format (see the 
	documentation).
	

Wed Jun  3 18:04:08 CEST 2009 (Manuel Serrano):

	*** comptime/Coerce/app.scm: remove an incorrect type check 
	optimization.
	

Tue Jun  2 09:19:38 CEST 2009 (Manuel Serrano):

	*** autoconf/inet_pton: add network autoconfiguration for MinGW.
	

Fri May 29 14:54:23 CEST 2009 (Manuel Serrano):
