@@ -1,0 +1,80 @@
+#*=====================================================================*/
+#*    .../prgm/project/bigloo/api/fthread/examples/http/Makefile       */
+#*    -------------------------------------------------------------    */
+#*    Author      :  Manuel Serrano                                    */
+#*    Creation    :  Mon Jan  7 14:55:33 2002                          */
+#*    Last change :  Thu Mar 24 07:40:17 2005 (serrano)                */
+#*    Copyright   :  2002-05 Manuel Serrano                            */
+#*    -------------------------------------------------------------    */
+#*    The Makefile to build the Fair threads tests                     */
+#*=====================================================================*/
+
+#*---------------------------------------------------------------------*/
+#*    Standard path                                                    */
+#*---------------------------------------------------------------------*/
+include ../../../../Makefile.config 
+
+#*---------------------------------------------------------------------*/
+#*    Bigloo                                                           */
+#*---------------------------------------------------------------------*/
+BIGLOO		= bigloo
+BFLAGS		= -g -unsafe #-O3
+
+#*---------------------------------------------------------------------*/
+#*    Objects and sources                                              */
+#*---------------------------------------------------------------------*/
+SCM_FILE	= http
+
+#*---------------------------------------------------------------------*/
+#*    All objects and sources                                          */
+#*---------------------------------------------------------------------*/
+POPULATION	= http.scm Makefile
+
+#*---------------------------------------------------------------------*/
+#*    the goals.                                                       */
+#*---------------------------------------------------------------------*/
+all: http.jvm http.out
+
+c: http.out
+http.out: http.o
+	$(BIGLOO) $(BFLAGS) http.o -o http.out
+
+http.jvm: http.class
+	$(BIGLOO) -jvm $(BFLAGS) http.class -o http.jvm
+
+pop:
+	@ echo $(POPULATION:%=fthread/examples/http/%)
+
+clean:
+	@- $(RM) -f *~ '#*#' core
+	@- $(RM) -f *.escm *.ast a.out http.c
+	@- $(RM) -f *.o
+	@- $(RM) -f JVMMAIN.class *.class
+	@- $(RM) -f http.out http.jvm
+
+#*---------------------------------------------------------------------*/
+#*    Test                                                             */
+#*---------------------------------------------------------------------*/
+test: test-c test-jvm
+
+test-c:
+	(export LD_LIBRARY_PATH=../lib:$$LD_LIBRARY_PATH; ./http.out)
+
+test-jvm:
+	./http.jvm
+
+#*---------------------------------------------------------------------*/
+#*    Suffixes                                                         */
+#*---------------------------------------------------------------------*/
+.SUFFIXES:
+.SUFFIXES: .bgl .scm .o .class
+
+#*---------------------------------------------------------------------*/
+#*    .scm.o                                                           */
+#*---------------------------------------------------------------------*/
+.scm.o: $*.scm
+	$(BIGLOO) -c $(BFLAGS) $*.scm -o $*.o
+
+.scm.class: $*.scm
+	$(BIGLOO) -c -jvm $(BFLAGS) $*.scm -o $*.class
+
